fixing the button animation with hidding the text which is overflow

--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -174,6 +174,8 @@
         flex-direction: column;
         width: 100%;
         padding: $spacing * 2 $spacing * 3 $spacing * 2 $spacing;
+        white-space: nowrap;
+        overflow: hidden;
     }
 
     &__name {
